TopBar component added. Trying to fix some overflow bugs .

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,12 @@
 }
 
 .App-link {
-    color: #61dafb;
+    color: #265967;
+}
+
+.custom-height{
+    max-height: 40px;
+    background-color: aqua;
 }
 
 @keyframes App-logo-spin {
